添加记录类型

--- a/DNSServerNew/DNSServerNew/Base.lproj/Main.storyboard
+++ b/DNSServerNew/DNSServerNew/Base.lproj/Main.storyboard
@@ -721,9 +721,9 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PFs-2h-C5i">
-                                <rect key="frame" x="175" y="101" width="144" height="32"/>
+                                <rect key="frame" x="213" y="101" width="69" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <buttonCell key="cell" type="push" title="query google.com" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Qlc-bq-HiY">
+                                <buttonCell key="cell" type="push" title="query" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Qlc-bq-HiY">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
